hopefully final z-index fix :)

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -21,6 +21,7 @@
         margin: 20px 0 5px 0;
     }
     .projectContainer {
+        z-index: 10;
         p {
             margin: 0;
             padding-top: 2px;
